--- a/article-nourriture.html
+++ b/article-nourriture.html
@@ -3,61 +3,107 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nourriture pour chien sensible : nos conseils</title>
+  <title>Nourriture pour chien sensible : nos conseils | ToutouStyle</title>
+  <meta name="description" content="Découvrez nos conseils pratiques pour choisir une alimentation adaptée aux chiens à l'estomac sensible. Sélection de croquettes hypoallergéniques recommandées.">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Nourriture pour chien sensible : nos conseils | ToutouStyle">
+  <meta property="og:description" content="Améliorez le confort digestif de votre chien sensible grâce à notre sélection de croquettes adaptées.">
+  <meta property="og:image" content="https://a.media-amazon.com/images/I/71I+MD3d+FL._AC_SL1500_.jpg">
+  <meta property="og:url" content="https://www.toutoustyle.com/blog/nourriture-chien-sensible">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nourriture pour chien sensible : nos conseils | ToutouStyle">
+  <meta name="twitter:description" content="Nos conseils pour bien nourrir un chien sensible : hypoallergénique, sans céréales, digeste.">
+  <meta name="twitter:image" content="https://a.media-amazon.com/images/I/71I+MD3d+FL._AC_SL1500_.jpg">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-    <h1>Nourriture pour chien sensible : nos conseils</h1>
+    <h1>Nourriture pour chien sensible : nos conseils 🐾</h1>
   </header>
 
   <div class="container">
 
-    <article>
-      <h2>Pourquoi certains chiens ont un estomac sensible ?</h2>
-      <p>Certains chiens digèrent mal certaines protéines, céréales ou additifs. Cela peut provoquer des vomissements, flatulences, diarrhées ou démangeaisons. Choisir la bonne alimentation peut vraiment améliorer leur confort.</p>
-    </article>
+    <section>
+      <h2>Pourquoi certains chiens ont un estomac sensible ?</h2>
+      <p>Certains chiens digèrent mal certaines protéines, céréales ou additifs. Résultat : vomissements, flatulences, diarrhées ou démangeaisons. Adapter leur alimentation peut tout changer pour leur confort quotidien.</p>
+    </section>
 
-    <article>
-      <h2>Ce qu’il faut éviter</h2>
-      <p>🚫 Les sous-produits animaux, colorants artificiels, sucres ajoutés ou conservateurs chimiques. Ces éléments irritent souvent l’estomac fragile d’un chien.</p>
-    </article>
+    <section>
+      <h2>🚫 Ce qu’il faut éviter</h2>
+      <p>Les sous-produits animaux, colorants artificiels, sucres ajoutés et conservateurs chimiques sont souvent responsables d'irritations digestives.</p>
+    </section>
 
-    <article>
-      <h2>Ce qu’il faut privilégier</h2>
-      <p>✅ Une nourriture hypoallergénique, avec peu d’ingrédients, à base de protéines faciles à digérer (agneau, poisson, canard) et sans céréales.</p>
-    </article>
+    <section>
+      <h2>✅ Ce qu’il faut privilégier</h2>
+      <p>Opte pour une nourriture hypoallergénique, avec peu d’ingrédients, riche en protéines digestes (agneau, saumon, canard) et sans céréales si possible.</p>
+    </section>
+<section class="astuce">
+  <h2>💡 Astuce nutrition : comment faciliter la digestion de ton chien</h2>
+  <p>👉 Donne-lui plusieurs petits repas par jour plutôt qu'un gros.  
+  👉 Évite de changer brutalement sa nourriture : fais une transition sur 7 à 10 jours en mélangeant progressivement l'ancienne et la nouvelle.  
+  👉 Garde toujours de l'eau fraîche à disposition pour soutenir sa digestion.</p>
+</section>
 
-    <article>
-      <h2>Notre sélection Amazon</h2>
+    <section>
+      <h2>Notre sélection Amazon 🛒</h2>
 
       <div class="produit">
         <h3>1. Ultima Medium-Maxi Sensitive – Saumon & Riz</h3>
-        <img src="https://a.media-amazon.com/images/I/71I+MD3d+FL._AC_SL1500_.jpg">
-        <p>Parfait pour les chiens adultes avec une digestion sensible. Ingrédients doux et riches en fibres pour une bonne santé intestinale.</p>
+        <img src="https://a.media-amazon.com/images/I/71I+MD3d+FL._AC_SL1500_.jpg" alt="Ultima Saumon & Riz chien sensible">
+        <p>Pour les chiens adultes à digestion délicate. Ingrédients doux, riches en fibres, favorisant un bon transit intestinal.</p>
         <a href="https://amzn.to/3YhyB0A" target="_blank" class="bouton">Voir sur Amazon</a>
       </div>
 
       <div class="produit">
-  <h3>2. Franklin Pet Food – Hypoallergéniques au Saumon</h3>
-  <img src="https://a.media-amazon.com/images/I/51BUvXoz7PL._AC_SL1080_.jpg" alt="Franklin Pet Food hypoallergénique">
-  <p>Sans céréales, avec une seule source de protéine animale (saumon). Idéal pour les chiens sensibles ou allergiques.</p>
-  <a href="https://amzn.to/44Fd9qc" target="_blank" class="bouton">Voir sur Amazon</a>
-</div>
-
+        <h3>2. Franklin Pet Food – Hypoallergénique au Saumon</h3>
+        <img src="https://a.media-amazon.com/images/I/51BUvXoz7PL._AC_SL1080_.jpg" alt="Croquettes Franklin Pet Food hypoallergéniques">
+        <p>Sans céréales, mono-protéine animale (saumon). Idéal pour éviter les allergies alimentaires et protéger les estomacs fragiles.</p>
+        <a href="https://amzn.to/44Fd9qc" target="_blank" class="bouton">Voir sur Amazon</a>
+      </div>
 
       <div class="produit">
-        <h3>3. Edgard & Cooper – Canard & Poulet </h3>
-        <img src="https://a.media-amazon.com/images/I/71b7JhRpq+L._AC_SL1500_.jpg" alt="Edgard & Cooper Croquettes naturelles">
-        <p>Sans céréales, riche en viande fraîche et en superaliments. Parfait pour les chiens sensibles et gourmands.</p>
+        <h3>3. Edgard & Cooper – Canard & Poulet</h3>
+        <img src="https://a.media-amazon.com/images/I/71b7JhRpq+L._AC_SL1500_.jpg" alt="Edgard & Cooper Croquettes naturelles chien sensible">
+        <p>Sans céréales, riche en viande fraîche et en superaliments naturels. Pour des repas savoureux et bien tolérés par les petits estomacs.</p>
         <a href="https://amzn.to/3EMF6lh" target="_blank" class="bouton">Voir sur Amazon</a>
       </div>
 
-    </article>
+    </section>
 
     <a href="blog.html" class="back">← Retour au blog</a>
+
   </div>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BlogPosting",
+    "headline": "Nourriture pour chien sensible : nos conseils",
+    "description": "Tout savoir pour bien nourrir un chien sensible : recommandations alimentaires, erreurs à éviter et sélection de croquettes adaptées.",
+    "image": "https://a.media-amazon.com/images/I/71I+MD3d+FL._AC_SL1500_.jpg",
+    "author": {
+      "@type": "Organization",
+      "name": "ToutouStyle"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "ToutouStyle",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.toutoustyle.com/logo.png"
+      }
+    },
+    "url": "https://www.toutoustyle.com/blog/nourriture-chien-sensible",
+    "datePublished": "2024-04-28"
+  }
+  </script>
 
 </body>
 </html>
