--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
       <h3>5 laisses stylées à moins de 20€</h3>
       <div class="rating">⭐⭐⭐⭐☆ (4/5)</div>
       <p>Découvrez notre sélection de laisses aussi solides que stylées, sans exploser votre budget !</p>
-      <a href="articles-laisses.html" class="btn">Voir les modèles</a>
+      <a href="article-laisses.html" class="btn">Voir les modèles</a>
     </div>
 
     <div class="article-card">
