--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <li><a href="article-laisses.html">5 laisses stylées à moins de 20€</a></li>
     <li><a href="article-harnais.html">Comment bien choisir un harnais pour petit chien</a></li>
     <li><a href="article.nourriture.html">Nourriture pour chien sensible : nos conseils</a></li>
-    <li><a href="article-colliers.html>Comparatif : colliers pour petit chien</a></li>
+    <li><a href="article-colliers.html">Comparatif : colliers pour petit chien</a></li>
   </ul>
 </section>
 
